# jpprint

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  STANDARDS.md  example_color_diff.py  jpprint.py  pyproject.toml  run_tests.py  setup.cfg  setup.py  tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: flake8.yml  lint.yml  test.yml  tests.yml
examples/: example_alignment.py  example_box_mode.py  example_color_diff.py
jpprint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  colors.py  core.py  formatter.py  output.py
src/jpprint/: __init__.py  formatter.py  output.py
tests/: __init__.py  test_alignment.py  test_basic.py  test_colors.py  test_options.py  tests.py
