[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpprint"
version='0.13.0'
description='Basic print and comparison of two dictionaries and/or json files'
readme = "README.rst"
authors = [{ name = "voidnologo", email = "dev@voidnologo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["json", "print"]
requires-python = ">=2.7"

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/voidnologo/jpprint"
