[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpprint"
version="0.13.0"
description='Basic print and comparison of two dictionaries and/or json files'
readme = "README.md"
authors = [{ name = "voidnologo", email = "dev@voidnologo.com" }]
keywords = ["json", "print"]
requires-python = ">=3.6"
dependencies = []
dynamic = ["classifiers"]

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/voidnologo/jpprint"
Repository = "https://github.com/voidnologo/jpprint"
