[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpprint"
version = "2.0.0"
description = "Side-by-side JSON comparison tool with color-coded diff indicators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "voidnologo", email = "dev@voidnologo.com"},
]
keywords = ["json", "print", "diff", "comparison"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/voidnologo/jpprint"
Repository = "https://github.com/voidnologo/jpprint"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
