[metadata]
name = jpprint
version = 0.13.0
description = A simple Python package example
description = Basic print and comparison of two dictionaries and/or json files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voidnologo/jpprint
author = voidnologo
author_email = dev@voidnologo.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = .
