[metadata]
name = jpprint
version = 0.13.0
description = Basic print and comparison of two dictionaries and/or json files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voidnologo/jpprint
author = voidnologo
author_email = dev@voidnologo.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >=3.6
py_modules = jpprint
